fix overflow

--- a/src/components/SectionTitle/main.scss
+++ b/src/components/SectionTitle/main.scss
@@ -41,7 +41,8 @@
         background: rgba(255, 255, 255, 0.2);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
-        inset: clamp(1.375rem, 0.875rem + 2.5vw, 2.8125rem);
+        inset-inline: clamp(1.375rem, 0.875rem + 2.5vw, 2.8125rem);
+        inset-block: clamp(1.375rem, 0.875rem + 2.5vh, 2.8125rem);
         backdrop-filter: blur(2px);
     }
 
@@ -60,8 +61,8 @@
         top: var(--navbar-height);
         left: 0;
 
-        height: calc(100vh - var(--navbar-height));
-        height: calc(100svh - var(--navbar-height));
+        height: calc(100vh - var( --navbar-height) );
+        height: calc(100svh - var( --navbar-height) );
 
         grid-row: main-start / main-end;
         grid-column: title-content;
@@ -70,7 +71,15 @@
             position: absolute;
 
             inset-inline: clamp(1.375rem, -0.1033rem + 7.3913vw, 5.625rem);
-            inset-block: clamp(1.375rem, -1.9728rem + 16.7391vw, 11rem);
+            inset-block: clamp(1.375rem, -1.9728rem + 16.7391vh, 11rem);            
+        }
+    }
+}
+
+@media (max-height: 450px) {
+    .section-title {
+        .section-title-text {
+            line-height: 1.2;
         }
     }
 }
